blocks/browse/da-browse/da-browse.css
:host {
  display: block;
}

.da-browse-header {
  padding: var(--s2-spacing-200);
  height: 40px;
  display: flex;
  align-items: center;
  gap: var(--s2-spacing-100);
}

.da-browse-content {
  max-width: var(--se-grid-container-width);
  margin: 0 auto;
  padding: 20px 0;
}

.chat-btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 24px;
  min-height: 24px;
  padding: 0 4px;
  margin: 0;
  border: none;
  border-radius: 8px;
  background: transparent;
  cursor: pointer;

  & svg {
    display: block;
    flex-shrink: 0;
    width: 16px;
    height: 16px;
    overflow: hidden;
  }

  &:hover {
    background-color: var(--s2-gray-75);
  }

  &:focus-visible {
    outline: 2px solid var(--s2-blue-800);
    outline-offset: 2px;
  }
}

.da-breadcrumb-action-area {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  row-gap: var(--s2-spacing-100);

  nx-breadcrumb {
    --s2-component-m-regular-font-size: var(--s2-component-l-regular-font-size);
  }
}

.da-breadcrumb-area {
  display: flex;
  align-items: center;
  min-height: 28px;
}

.da-breadcrumb-sep {
  flex-shrink: 0;
  display: block;
  width: 8px;
  height: 8px;
  color: currentColor;
  margin-inline: var(--s2-spacing-75);
}

.da-breadcrumb-config {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 4px;
  height: 24px;
  border-radius: var(--s2-corner-radius-100);
  color: var(--s2-gray-700);
  flex-shrink: 0;
  cursor: pointer;
  width: 24px;
  height: 24px;
  margin-left: var(--s2-spacing-75);

  &:hover{
    background-color: var(--s2-gray-200);
  }

  & svg {
    display: block;
    width: 18px;
    height: 18px;
  }

  &:hover {
    color: var(--s2-gray-900);
  }
}

.da-tabpanel {
  margin-top: 30px;
}

.da-tablist {
  display: flex;
  gap: 18px;
  margin-bottom: 24px;

  button {
    font-family: var(--body-font-family);
    position: relative;
    display: block;
    background: none;
    border: none;
    padding: 0 0 6px;
    margin: 0;
    box-sizing: border-box;
    color: var(--s2-gray-700);
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 700;
  }

  button::after {
    display: block;
    content: "";
    position: absolute;
    bottom: 0;
    height: 3px;
    width: 100%;
    opacity: 0;
    transition: opacity 0.2s ease-in-out 0s;
    background: var(--s2-gray-900);
    border-radius: 3px;
  }

  button[aria-selected="true"] {
    color: var(--s2-gray-900);
  }

  button[aria-selected="true"]::after {
    opacity: 1;
  }
}

[data-visible="false"] {
  display: none;
}

